// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`the wayfinder render > appends the notice-and-ask block when no tracker is configured 1`] = `
"A loose idea has arrived — too big for one agent session, and wrapped in fog: the way from here to the **destination** isn't visible yet. Wayfinding is about finding that way, not charging at the destination. This skill charts the way as a **shared map** on the repo's issue tracker, then works its **decision tickets** — questions whose resolution is a decision, not slices of a build to execute — one at a time until the route is clear.

The destination varies per effort, and naming it is the first act of charting — it shapes every ticket. It might be a spec to hand off and iterate on, a decision to lock before planning starts, or a change made in place like a data-structure migration. The map is domain-agnostic — engineering work, course content, whatever fits the shape.

## Plan, don't do

Wayfinder is **planning** by default: each ticket resolves a decision, and the map is done when the way is clear — nothing left to decide before someone goes and does the thing. The pull to just do the work is usually the signal you've reached the edge of the map and it's time to hand off. An effort can override this in its **Notes** — carrying execution into the map itself — but absent that, produce decisions, not deliverables.

## Refer by name

Every map and ticket is an issue, so it has a **name** — its title. In everything the human reads — narration, the map's Decisions-so-far — refer to it by that name, never by a bare id, number, or slug. A wall of \`#42, #43, #44\` is illegible; names read at a glance. The id and URL don't vanish — a name wraps its link — but they ride *inside* the name, never stand in for it.

## The Map

The map is a single issue on this repo's issue tracker, labelled \`wayfinder:map\` — the canonical artifact. Its tickets are child issues of the map.

The map is an **index**, not a store. It lists the decisions made and points at the tickets that hold their detail; a decision lives in exactly one place — its ticket — so the map never restates it, only gists it and links.

**Where the map, its child tickets, blocking, and frontier queries physically live is tracker-specific.** This repo's tracker and its operations prose sit at the bottom of this skill, under **Issue tracker**. Consult that block's "Wayfinding operations" section for how _this_ repo expresses them. If no tracker is configured, the block tells you how to choose one — never guess a tracker or reach for a local fallback on your own.

### The map body

The whole map at low resolution, loaded once per session. Open tickets are **not** listed — they are open child issues, found by query.

\`\`\`markdown
## Destination

<what reaching the end of this map looks like — the spec, decision, or change this effort is finding its way to. One or two lines; every session orients to it before choosing a ticket.>

## Notes

<domain; skills every session should consult; standing preferences for this effort>

## Decisions so far

<!-- the index — one line per closed ticket: enough to judge relevance, then zoom the link for the detail the ticket holds -->

- [<closed ticket title>](link) — <one-line gist of the answer>

## Not yet specified

<!-- see "Fog of war": in-scope fog you can't ticket yet; graduates as the frontier advances -->

## Out of scope

<!-- see "Out of scope": work ruled beyond the destination; closed, never graduates -->
\`\`\`

### Tickets

Each ticket is a **child issue** of the map; the tracker's issue id is its identity. Its body is the question, sized to one 100K token agent session:

\`\`\`markdown
## Question

<the decision or investigation this ticket resolves>
\`\`\`

Each ticket carries a \`wayfinder:<type>\` label — one of \`grilling\`, \`research\`, \`prototype\`, \`task\` (see [Skill planning](#skill-planning)).

A session **claims** a ticket by assigning it to the dev driving the map, **first**, before any work, so concurrent sessions skip it. That assignee _is_ the claim: an open, unassigned ticket is unclaimed.

Blocking uses the tracker's **native** dependency relationship — essential because it renders the frontier _visually_ in the tracker's own UI, so the human sees what's takeable without opening the map. Only a tracker that lacks native blocking falls back to a body convention. A ticket is **unblocked** when every ticket blocking it is closed; the **frontier** is the open, unblocked, unclaimed children — the edge of the known.

The answer isn't part of the body — it's recorded on resolution (see [Work through the map](#work-through-the-map)). Assets created while resolving a ticket are linked from the issue, not pasted in.

## Skill planning

The \`wayfinder:<type>\` label is a closed set of four, and it names the **shape** of the work, not the skills that resolve it:

- **grilling** — a decision conversation.
- **research** — a fact outside the working directory that a decision waits on.
- **prototype** — a cheap, rough artifact to react to when "how should it look" or "how should it behave" is the question.
- **task** — manual work that must happen before a decision can be made. The one type that *does* rather than decides; it earns its place by unblocking a decision, never by delivering the destination. Its answer records what was done and any facts later tickets depend on.

The type is **orthogonal** to the ticket's skills: any type can carry any skill from the list below. Plan a ticket's skills separately from its type, and record each as a ticket-carried pointer in the ticket body, so the session that claims it loads the skill.

A **task** ticket carries no core skill. It does manual work rather than reaching a decision, so the decision-conversation, research, and prototype protocols have nothing to add to it. A registered ticket skill still applies to a task ticket whenever its when sentence says so.

Readiness is **one rule**: a ticket that needs zero human input is AFK — label it \`ready-for-agent\`; a ticket that needs human oversight is HITL — label it \`ready-for-human\`. A HITL ticket resolves only through a live exchange, and the agent never stands in for the human's side of it (a grilling agent that answers its own questions has broken this).

Plan each ticket's skills from this list:

- \`wayfinder skill grill-with-docs\` — the default decision conversation; reach for it whenever a decision needs talking through.
- \`wayfinder skill research\` — when a fact outside the working directory has to be found before a decision can be made.
- \`wayfinder skill prototype\` — when the open question is how something should look or behave, and a rough artifact would sharpen it.

### Ticket skills

Assign a registered ticket skill to a ticket by writing a ticket-carried pointer that names the harness skill — for example "At session start, invoke the pre-mortem skill and apply it." Each carries the condition that makes it relevant.

No ticket skills are registered. A developer adds one with \`wayfinder ticket-skill add <name> --when "<sentence>"\`.

## Fog of war

The map is _deliberately_ incomplete: don't chart what you can't yet see. Beyond the live tickets lies the **fog of war** — the dim view of decisions and investigations you can tell are coming but can't yet pin down, because they hang on questions still open. Resolving a ticket clears the fog ahead of it, graduating whatever's now specifiable into fresh tickets — one at a time, until the way to the destination is clear and no tickets remain.

The map's **Not yet specified** section is where that dim view is written down: the suspected question, the area to revisit later. It's the undiscovered frontier _toward_ the destination — everything here is in scope, just not sharp enough to ticket. Write as loosely or as fully as the view allows; it doubles as a signpost for collaborators reading where the effort is headed.

**Fog or ticket?** The test is whether you can state the question precisely now — _not_ whether you can answer it now.

- **Ticket when** the question is already sharp — even if it's blocked and you can't act on it yet.
- **Not yet specified when** you can't yet phrase it that sharply. Don't pre-slice the fog into ticket-sized pieces: it's coarser than a ticket, and one patch may graduate into several tickets, or none, once the frontier reaches it.

**Not yet specified** excludes what's already decided (Decisions so far), what's already a live ticket, and what's out of scope (the next section).

## Out of scope

Fog only ever gathers _toward_ the destination. The destination fixes the scope, so work beyond it is **out of scope** — it isn't fog, and it doesn't belong in **Not yet specified**. It gets its own **Out of scope** section on the map: work you've consciously ruled out of _this_ effort. Scope, not sharpness, lands it here.

Out-of-scope work never graduates — the frontier stops at the destination — so it returns only if the destination is redrawn, and then as a fresh effort, not a resumption.

Ruling something out of scope is a scoping act, not a step on the route. When a ticket that already exists turns out to sit past the destination — mis-scoped in while charting, or exposed by a resolution — **close it** (a closed ticket is unambiguously off the frontier) and leave one line in the **Out of scope** section: the gist plus why it's out of scope, linking the closed ticket. It stays out of **Decisions so far**, which records the route actually walked — a scope boundary isn't a step on it.

## Invocation

Two modes. Either way, **never resolve more than one ticket per session**.

### Chart the map

User invokes with a loose idea.

1. **Name the destination** through a decision conversation that pins down what this map is finding its way to — the spec, decision, or change. The destination fixes the scope, so it's settled first. Before you ask your first question you must run \`wayfinder skill grill-with-docs\` — every map names terms and settles design decisions, so the glossary and ADR discipline it carries belongs on this conversation, not only on the ones that feel like design. The protocol is the same either way:

Interview me relentlessly about every aspect of this until we reach a shared understanding. Walk down each branch of the decision tree, resolving dependencies between decisions one-by-one. For each question, provide your recommended answer.

Ask the questions one at a time, waiting for feedback on each question before continuing. Asking multiple questions at once is bewildering.

If a *fact* can be found by exploring the environment (filesystem, tools, etc.), look it up rather than asking me. The *decisions*, though, are mine — put each one to me and wait for my answer.

Do not act on it until I confirm we have reached a shared understanding.


2. **Map the frontier.** Grill again, **breadth-first** this time: fan out across the whole space rather than deep on any one thread, surfacing the open decisions and the first steps takeable now. **If this surfaces no fog** — the way to the destination is already clear, the whole journey small enough for one session — you don't need a map. Stop and ask the user how they'd like to proceed.
3. **Create the map** (label \`wayfinder:map\`): Destination and Notes filled in, Decisions-so-far empty, the fog sketched into **Not yet specified**.
4. **Create the tickets you can specify now** as child issues of the map — then wire blocking edges in a **second pass** (issues need ids before they can reference each other). Wiring sorts them into the frontier and the blocked; everything you can't yet specify stays in the fog — the **Not yet specified** section.
5. Stop — charting is one session's work; it hand-resolves nothing.

### Work through the map

User invokes with a map (URL or number). A ticket is **optional** — without one, you pick the next decision, not the user.

1. Load the **map** — the low-res view, not every ticket body.
2. Choose the ticket. If the user named one, use it. Otherwise take the first frontier ticket in order. **Claim it**: assign it to yourself before any work.
3. Resolve it — **zoom as needed**: fetch the full body of any related or closed ticket on demand; invoke the skills the \`## Notes\` block names. You must run \`wayfinder skill grill-with-docs\` before resolving any ticket that reaches a decision — which is every type but \`task\` — so the resolution lands in the map's own vocabulary.
4. Record the resolution: post the answer as a **resolution comment**, **close** the issue, and **append a context pointer** to the map's Decisions-so-far.
5. Add newly-surfaced tickets (create-then-wire); graduate any fog the answer has made specifiable, clearing each graduated patch from **Not yet specified** so it lives only as its new ticket. If the answer reveals a ticket — this one or another — sits beyond the destination, **rule it out of scope** rather than resolving it on the route. If the decision invalidates other parts of the map, update or delete those tickets.

The user may run unblocked tickets in parallel, so expect other sessions to be editing the tracker concurrently.

## Issue tracker

No issue tracker is configured for this repo, so there is no operations prose to load.

Ask the human to choose one, and do not pick a tracker on your own:

- Use the local markdown tracker — run \`wayfinder tracker set local\`.
- Name this repo's tracker — run \`wayfinder tracker set "<value>"\`, for example \`wayfinder tracker set "github cli"\`.
"
`;

exports[`the wayfinder render > carries the whole tracker doc when a value resolves to a shipped doc 1`] = `
"A loose idea has arrived — too big for one agent session, and wrapped in fog: the way from here to the **destination** isn't visible yet. Wayfinding is about finding that way, not charging at the destination. This skill charts the way as a **shared map** on the repo's issue tracker, then works its **decision tickets** — questions whose resolution is a decision, not slices of a build to execute — one at a time until the route is clear.

The destination varies per effort, and naming it is the first act of charting — it shapes every ticket. It might be a spec to hand off and iterate on, a decision to lock before planning starts, or a change made in place like a data-structure migration. The map is domain-agnostic — engineering work, course content, whatever fits the shape.

## Plan, don't do

Wayfinder is **planning** by default: each ticket resolves a decision, and the map is done when the way is clear — nothing left to decide before someone goes and does the thing. The pull to just do the work is usually the signal you've reached the edge of the map and it's time to hand off. An effort can override this in its **Notes** — carrying execution into the map itself — but absent that, produce decisions, not deliverables.

## Refer by name

Every map and ticket is an issue, so it has a **name** — its title. In everything the human reads — narration, the map's Decisions-so-far — refer to it by that name, never by a bare id, number, or slug. A wall of \`#42, #43, #44\` is illegible; names read at a glance. The id and URL don't vanish — a name wraps its link — but they ride *inside* the name, never stand in for it.

## The Map

The map is a single issue on this repo's issue tracker, labelled \`wayfinder:map\` — the canonical artifact. Its tickets are child issues of the map.

The map is an **index**, not a store. It lists the decisions made and points at the tickets that hold their detail; a decision lives in exactly one place — its ticket — so the map never restates it, only gists it and links.

**Where the map, its child tickets, blocking, and frontier queries physically live is tracker-specific.** This repo's tracker and its operations prose sit at the bottom of this skill, under **Issue tracker**. Consult that block's "Wayfinding operations" section for how _this_ repo expresses them. If no tracker is configured, the block tells you how to choose one — never guess a tracker or reach for a local fallback on your own.

### The map body

The whole map at low resolution, loaded once per session. Open tickets are **not** listed — they are open child issues, found by query.

\`\`\`markdown
## Destination

<what reaching the end of this map looks like — the spec, decision, or change this effort is finding its way to. One or two lines; every session orients to it before choosing a ticket.>

## Notes

<domain; skills every session should consult; standing preferences for this effort>

## Decisions so far

<!-- the index — one line per closed ticket: enough to judge relevance, then zoom the link for the detail the ticket holds -->

- [<closed ticket title>](link) — <one-line gist of the answer>

## Not yet specified

<!-- see "Fog of war": in-scope fog you can't ticket yet; graduates as the frontier advances -->

## Out of scope

<!-- see "Out of scope": work ruled beyond the destination; closed, never graduates -->
\`\`\`

### Tickets

Each ticket is a **child issue** of the map; the tracker's issue id is its identity. Its body is the question, sized to one 100K token agent session:

\`\`\`markdown
## Question

<the decision or investigation this ticket resolves>
\`\`\`

Each ticket carries a \`wayfinder:<type>\` label — one of \`grilling\`, \`research\`, \`prototype\`, \`task\` (see [Skill planning](#skill-planning)).

A session **claims** a ticket by assigning it to the dev driving the map, **first**, before any work, so concurrent sessions skip it. That assignee _is_ the claim: an open, unassigned ticket is unclaimed.

Blocking uses the tracker's **native** dependency relationship — essential because it renders the frontier _visually_ in the tracker's own UI, so the human sees what's takeable without opening the map. Only a tracker that lacks native blocking falls back to a body convention. A ticket is **unblocked** when every ticket blocking it is closed; the **frontier** is the open, unblocked, unclaimed children — the edge of the known.

The answer isn't part of the body — it's recorded on resolution (see [Work through the map](#work-through-the-map)). Assets created while resolving a ticket are linked from the issue, not pasted in.

## Skill planning

The \`wayfinder:<type>\` label is a closed set of four, and it names the **shape** of the work, not the skills that resolve it:

- **grilling** — a decision conversation.
- **research** — a fact outside the working directory that a decision waits on.
- **prototype** — a cheap, rough artifact to react to when "how should it look" or "how should it behave" is the question.
- **task** — manual work that must happen before a decision can be made. The one type that *does* rather than decides; it earns its place by unblocking a decision, never by delivering the destination. Its answer records what was done and any facts later tickets depend on.

The type is **orthogonal** to the ticket's skills: any type can carry any skill from the list below. Plan a ticket's skills separately from its type, and record each as a ticket-carried pointer in the ticket body, so the session that claims it loads the skill.

A **task** ticket carries no core skill. It does manual work rather than reaching a decision, so the decision-conversation, research, and prototype protocols have nothing to add to it. A registered ticket skill still applies to a task ticket whenever its when sentence says so.

Readiness is **one rule**: a ticket that needs zero human input is AFK — label it \`ready-for-agent\`; a ticket that needs human oversight is HITL — label it \`ready-for-human\`. A HITL ticket resolves only through a live exchange, and the agent never stands in for the human's side of it (a grilling agent that answers its own questions has broken this).

Plan each ticket's skills from this list:

- \`wayfinder skill grill-with-docs\` — the default decision conversation; reach for it whenever a decision needs talking through.
- \`wayfinder skill research\` — when a fact outside the working directory has to be found before a decision can be made.
- \`wayfinder skill prototype\` — when the open question is how something should look or behave, and a rough artifact would sharpen it.

### Ticket skills

Assign a registered ticket skill to a ticket by writing a ticket-carried pointer that names the harness skill — for example "At session start, invoke the pre-mortem skill and apply it." Each carries the condition that makes it relevant.

No ticket skills are registered. A developer adds one with \`wayfinder ticket-skill add <name> --when "<sentence>"\`.

## Fog of war

The map is _deliberately_ incomplete: don't chart what you can't yet see. Beyond the live tickets lies the **fog of war** — the dim view of decisions and investigations you can tell are coming but can't yet pin down, because they hang on questions still open. Resolving a ticket clears the fog ahead of it, graduating whatever's now specifiable into fresh tickets — one at a time, until the way to the destination is clear and no tickets remain.

The map's **Not yet specified** section is where that dim view is written down: the suspected question, the area to revisit later. It's the undiscovered frontier _toward_ the destination — everything here is in scope, just not sharp enough to ticket. Write as loosely or as fully as the view allows; it doubles as a signpost for collaborators reading where the effort is headed.

**Fog or ticket?** The test is whether you can state the question precisely now — _not_ whether you can answer it now.

- **Ticket when** the question is already sharp — even if it's blocked and you can't act on it yet.
- **Not yet specified when** you can't yet phrase it that sharply. Don't pre-slice the fog into ticket-sized pieces: it's coarser than a ticket, and one patch may graduate into several tickets, or none, once the frontier reaches it.

**Not yet specified** excludes what's already decided (Decisions so far), what's already a live ticket, and what's out of scope (the next section).

## Out of scope

Fog only ever gathers _toward_ the destination. The destination fixes the scope, so work beyond it is **out of scope** — it isn't fog, and it doesn't belong in **Not yet specified**. It gets its own **Out of scope** section on the map: work you've consciously ruled out of _this_ effort. Scope, not sharpness, lands it here.

Out-of-scope work never graduates — the frontier stops at the destination — so it returns only if the destination is redrawn, and then as a fresh effort, not a resumption.

Ruling something out of scope is a scoping act, not a step on the route. When a ticket that already exists turns out to sit past the destination — mis-scoped in while charting, or exposed by a resolution — **close it** (a closed ticket is unambiguously off the frontier) and leave one line in the **Out of scope** section: the gist plus why it's out of scope, linking the closed ticket. It stays out of **Decisions so far**, which records the route actually walked — a scope boundary isn't a step on it.

## Invocation

Two modes. Either way, **never resolve more than one ticket per session**.

### Chart the map

User invokes with a loose idea.

1. **Name the destination** through a decision conversation that pins down what this map is finding its way to — the spec, decision, or change. The destination fixes the scope, so it's settled first. Before you ask your first question you must run \`wayfinder skill grill-with-docs\` — every map names terms and settles design decisions, so the glossary and ADR discipline it carries belongs on this conversation, not only on the ones that feel like design. The protocol is the same either way:

Interview me relentlessly about every aspect of this until we reach a shared understanding. Walk down each branch of the decision tree, resolving dependencies between decisions one-by-one. For each question, provide your recommended answer.

Ask the questions one at a time, waiting for feedback on each question before continuing. Asking multiple questions at once is bewildering.

If a *fact* can be found by exploring the environment (filesystem, tools, etc.), look it up rather than asking me. The *decisions*, though, are mine — put each one to me and wait for my answer.

Do not act on it until I confirm we have reached a shared understanding.


2. **Map the frontier.** Grill again, **breadth-first** this time: fan out across the whole space rather than deep on any one thread, surfacing the open decisions and the first steps takeable now. **If this surfaces no fog** — the way to the destination is already clear, the whole journey small enough for one session — you don't need a map. Stop and ask the user how they'd like to proceed.
3. **Create the map** (label \`wayfinder:map\`): Destination and Notes filled in, Decisions-so-far empty, the fog sketched into **Not yet specified**.
4. **Create the tickets you can specify now** as child issues of the map — then wire blocking edges in a **second pass** (issues need ids before they can reference each other). Wiring sorts them into the frontier and the blocked; everything you can't yet specify stays in the fog — the **Not yet specified** section.
5. Stop — charting is one session's work; it hand-resolves nothing.

### Work through the map

User invokes with a map (URL or number). A ticket is **optional** — without one, you pick the next decision, not the user.

1. Load the **map** — the low-res view, not every ticket body.
2. Choose the ticket. If the user named one, use it. Otherwise take the first frontier ticket in order. **Claim it**: assign it to yourself before any work.
3. Resolve it — **zoom as needed**: fetch the full body of any related or closed ticket on demand; invoke the skills the \`## Notes\` block names. You must run \`wayfinder skill grill-with-docs\` before resolving any ticket that reaches a decision — which is every type but \`task\` — so the resolution lands in the map's own vocabulary.
4. Record the resolution: post the answer as a **resolution comment**, **close** the issue, and **append a context pointer** to the map's Decisions-so-far.
5. Add newly-surfaced tickets (create-then-wire); graduate any fog the answer has made specifiable, clearing each graduated patch from **Not yet specified** so it lives only as its new ticket. If the answer reveals a ticket — this one or another — sits beyond the destination, **rule it out of scope** rather than resolving it on the route. If the decision invalidates other parts of the map, update or delete those tickets.

The user may run unblocked tickets in parallel, so expect other sessions to be editing the tracker concurrently.

## Issue tracker: github cli

Issues live in this repo's GitHub Issues. Use the [\`gh\`](https://cli.github.com/) CLI for every operation. Run it inside a clone and it infers the repo from \`git remote -v\`.

The sub-issue and dependency flags below need \`gh\` 2.94.0 or later. Check with \`gh --version\`. For an older \`gh\`, see [Older gh](#older-gh).

### Conventions

- **Create**: \`gh issue create --title "..." --body-file <path>\`. Write a multi-line body to a file first.
- **Read**: \`gh issue view <n> --comments\`. Add \`--json <fields>\` for machine-readable output.
- **List**: \`gh issue list --state open --json number,title,labels,assignees\`. Filter with \`--label\`, \`--state\`, \`--assignee\`.
- **Comment**: \`gh issue comment <n> --body-file <path>\`
- **Label**: \`gh issue edit <n> --add-label "..."\` / \`--remove-label "..."\`
- **Close**: \`gh issue close <n> --comment "..."\`

### Labels

\`gh\` refuses a label that this repo does not have. When a skill tells you to apply a label that is missing, ask the human to choose: create it with \`gh label create <name>\`, or publish without it. Apply the choice they make.

### When a skill says "publish to the issue tracker"

Create a GitHub issue.

### When a skill says "fetch the relevant ticket"

Run \`gh issue view <n> --comments\`.

GitHub gives issues and pull requests one number space, so a bare \`#42\` can be either. Resolve it with \`gh issue view 42\`, and fall back to \`gh pr view 42\`.

### Wayfinding operations

The **map** is one issue. Each **ticket** is a sub-issue of the map.

- **Map**: \`gh issue create --label wayfinder:map --title "..." --body-file <path>\`
- **Child ticket**: \`gh issue create --parent <map> --label wayfinder:<type> --title "..." --body-file <path>\`, where \`<type>\` is \`research\`, \`prototype\`, \`grilling\`, or \`task\`. To adopt an issue that already exists, run \`gh issue edit <map> --add-sub-issue <n>\`.
- **Blocking**: \`gh issue edit <ticket> --add-blocked-by <blocker>\`, and \`--remove-blocked-by\` to undo. To create a ticket that carries its edge, run \`gh issue create --blocked-by <blocker> ...\`.
- **Frontier**: two steps, because no search qualifier scopes a query to one map's children.
  1. List the children: \`gh issue view <map> --json subIssues\`.
  2. For each child with \`state: OPEN\`, run \`gh issue view <n> --json blockedBy,assignees\`. The ticket is on the frontier when \`assignees\` is empty and every \`blockedBy\` node has \`state: CLOSED\`. First in map order wins.
- **Claim**: \`gh issue edit <n> --add-assignee @me\` — the session's first write.
- **Resolve**: \`gh issue comment <n> --body-file <path>\`, then \`gh issue close <n>\`, then append the context pointer to the map's Decisions-so-far.

### Older gh

\`gh\` below 2.94.0 has no sub-issue or dependency flags. Reach the same GitHub features through the REST API:

- **Child ticket**: \`gh api --method POST repos/{owner}/{repo}/issues/<map>/sub_issues -F sub_issue_id=<child-db-id>\`
- **Blocking**: \`gh api --method POST repos/{owner}/{repo}/issues/<ticket>/dependencies/blocked_by -F issue_id=<blocker-db-id>\`
- Both endpoints take the **database id**, not the \`#number\`. Get it with \`gh api repos/{owner}/{repo}/issues/<n> --jq .id\`.
- **Frontier**: read \`issue_dependencies_summary.blocked_by\` from \`gh api repos/{owner}/{repo}/issues/<n>\`. A value above zero means the ticket has an open blocker.

Where the repo has neither the flags nor the endpoints, write \`Part of #<map>\` and \`Blocked by: #<n>\` at the top of the ticket body.
"
`;

exports[`the wayfinder render > names the tracker when a value resolves to no shipped doc 1`] = `
"A loose idea has arrived — too big for one agent session, and wrapped in fog: the way from here to the **destination** isn't visible yet. Wayfinding is about finding that way, not charging at the destination. This skill charts the way as a **shared map** on the repo's issue tracker, then works its **decision tickets** — questions whose resolution is a decision, not slices of a build to execute — one at a time until the route is clear.

The destination varies per effort, and naming it is the first act of charting — it shapes every ticket. It might be a spec to hand off and iterate on, a decision to lock before planning starts, or a change made in place like a data-structure migration. The map is domain-agnostic — engineering work, course content, whatever fits the shape.

## Plan, don't do

Wayfinder is **planning** by default: each ticket resolves a decision, and the map is done when the way is clear — nothing left to decide before someone goes and does the thing. The pull to just do the work is usually the signal you've reached the edge of the map and it's time to hand off. An effort can override this in its **Notes** — carrying execution into the map itself — but absent that, produce decisions, not deliverables.

## Refer by name

Every map and ticket is an issue, so it has a **name** — its title. In everything the human reads — narration, the map's Decisions-so-far — refer to it by that name, never by a bare id, number, or slug. A wall of \`#42, #43, #44\` is illegible; names read at a glance. The id and URL don't vanish — a name wraps its link — but they ride *inside* the name, never stand in for it.

## The Map

The map is a single issue on this repo's issue tracker, labelled \`wayfinder:map\` — the canonical artifact. Its tickets are child issues of the map.

The map is an **index**, not a store. It lists the decisions made and points at the tickets that hold their detail; a decision lives in exactly one place — its ticket — so the map never restates it, only gists it and links.

**Where the map, its child tickets, blocking, and frontier queries physically live is tracker-specific.** This repo's tracker and its operations prose sit at the bottom of this skill, under **Issue tracker**. Consult that block's "Wayfinding operations" section for how _this_ repo expresses them. If no tracker is configured, the block tells you how to choose one — never guess a tracker or reach for a local fallback on your own.

### The map body

The whole map at low resolution, loaded once per session. Open tickets are **not** listed — they are open child issues, found by query.

\`\`\`markdown
## Destination

<what reaching the end of this map looks like — the spec, decision, or change this effort is finding its way to. One or two lines; every session orients to it before choosing a ticket.>

## Notes

<domain; skills every session should consult; standing preferences for this effort>

## Decisions so far

<!-- the index — one line per closed ticket: enough to judge relevance, then zoom the link for the detail the ticket holds -->

- [<closed ticket title>](link) — <one-line gist of the answer>

## Not yet specified

<!-- see "Fog of war": in-scope fog you can't ticket yet; graduates as the frontier advances -->

## Out of scope

<!-- see "Out of scope": work ruled beyond the destination; closed, never graduates -->
\`\`\`

### Tickets

Each ticket is a **child issue** of the map; the tracker's issue id is its identity. Its body is the question, sized to one 100K token agent session:

\`\`\`markdown
## Question

<the decision or investigation this ticket resolves>
\`\`\`

Each ticket carries a \`wayfinder:<type>\` label — one of \`grilling\`, \`research\`, \`prototype\`, \`task\` (see [Skill planning](#skill-planning)).

A session **claims** a ticket by assigning it to the dev driving the map, **first**, before any work, so concurrent sessions skip it. That assignee _is_ the claim: an open, unassigned ticket is unclaimed.

Blocking uses the tracker's **native** dependency relationship — essential because it renders the frontier _visually_ in the tracker's own UI, so the human sees what's takeable without opening the map. Only a tracker that lacks native blocking falls back to a body convention. A ticket is **unblocked** when every ticket blocking it is closed; the **frontier** is the open, unblocked, unclaimed children — the edge of the known.

The answer isn't part of the body — it's recorded on resolution (see [Work through the map](#work-through-the-map)). Assets created while resolving a ticket are linked from the issue, not pasted in.

## Skill planning

The \`wayfinder:<type>\` label is a closed set of four, and it names the **shape** of the work, not the skills that resolve it:

- **grilling** — a decision conversation.
- **research** — a fact outside the working directory that a decision waits on.
- **prototype** — a cheap, rough artifact to react to when "how should it look" or "how should it behave" is the question.
- **task** — manual work that must happen before a decision can be made. The one type that *does* rather than decides; it earns its place by unblocking a decision, never by delivering the destination. Its answer records what was done and any facts later tickets depend on.

The type is **orthogonal** to the ticket's skills: any type can carry any skill from the list below. Plan a ticket's skills separately from its type, and record each as a ticket-carried pointer in the ticket body, so the session that claims it loads the skill.

A **task** ticket carries no core skill. It does manual work rather than reaching a decision, so the decision-conversation, research, and prototype protocols have nothing to add to it. A registered ticket skill still applies to a task ticket whenever its when sentence says so.

Readiness is **one rule**: a ticket that needs zero human input is AFK — label it \`ready-for-agent\`; a ticket that needs human oversight is HITL — label it \`ready-for-human\`. A HITL ticket resolves only through a live exchange, and the agent never stands in for the human's side of it (a grilling agent that answers its own questions has broken this).

Plan each ticket's skills from this list:

- \`wayfinder skill grill-with-docs\` — the default decision conversation; reach for it whenever a decision needs talking through.
- \`wayfinder skill research\` — when a fact outside the working directory has to be found before a decision can be made.
- \`wayfinder skill prototype\` — when the open question is how something should look or behave, and a rough artifact would sharpen it.

### Ticket skills

Assign a registered ticket skill to a ticket by writing a ticket-carried pointer that names the harness skill — for example "At session start, invoke the pre-mortem skill and apply it." Each carries the condition that makes it relevant.

No ticket skills are registered. A developer adds one with \`wayfinder ticket-skill add <name> --when "<sentence>"\`.

## Fog of war

The map is _deliberately_ incomplete: don't chart what you can't yet see. Beyond the live tickets lies the **fog of war** — the dim view of decisions and investigations you can tell are coming but can't yet pin down, because they hang on questions still open. Resolving a ticket clears the fog ahead of it, graduating whatever's now specifiable into fresh tickets — one at a time, until the way to the destination is clear and no tickets remain.

The map's **Not yet specified** section is where that dim view is written down: the suspected question, the area to revisit later. It's the undiscovered frontier _toward_ the destination — everything here is in scope, just not sharp enough to ticket. Write as loosely or as fully as the view allows; it doubles as a signpost for collaborators reading where the effort is headed.

**Fog or ticket?** The test is whether you can state the question precisely now — _not_ whether you can answer it now.

- **Ticket when** the question is already sharp — even if it's blocked and you can't act on it yet.
- **Not yet specified when** you can't yet phrase it that sharply. Don't pre-slice the fog into ticket-sized pieces: it's coarser than a ticket, and one patch may graduate into several tickets, or none, once the frontier reaches it.

**Not yet specified** excludes what's already decided (Decisions so far), what's already a live ticket, and what's out of scope (the next section).

## Out of scope

Fog only ever gathers _toward_ the destination. The destination fixes the scope, so work beyond it is **out of scope** — it isn't fog, and it doesn't belong in **Not yet specified**. It gets its own **Out of scope** section on the map: work you've consciously ruled out of _this_ effort. Scope, not sharpness, lands it here.

Out-of-scope work never graduates — the frontier stops at the destination — so it returns only if the destination is redrawn, and then as a fresh effort, not a resumption.

Ruling something out of scope is a scoping act, not a step on the route. When a ticket that already exists turns out to sit past the destination — mis-scoped in while charting, or exposed by a resolution — **close it** (a closed ticket is unambiguously off the frontier) and leave one line in the **Out of scope** section: the gist plus why it's out of scope, linking the closed ticket. It stays out of **Decisions so far**, which records the route actually walked — a scope boundary isn't a step on it.

## Invocation

Two modes. Either way, **never resolve more than one ticket per session**.

### Chart the map

User invokes with a loose idea.

1. **Name the destination** through a decision conversation that pins down what this map is finding its way to — the spec, decision, or change. The destination fixes the scope, so it's settled first. Before you ask your first question you must run \`wayfinder skill grill-with-docs\` — every map names terms and settles design decisions, so the glossary and ADR discipline it carries belongs on this conversation, not only on the ones that feel like design. The protocol is the same either way:

Interview me relentlessly about every aspect of this until we reach a shared understanding. Walk down each branch of the decision tree, resolving dependencies between decisions one-by-one. For each question, provide your recommended answer.

Ask the questions one at a time, waiting for feedback on each question before continuing. Asking multiple questions at once is bewildering.

If a *fact* can be found by exploring the environment (filesystem, tools, etc.), look it up rather than asking me. The *decisions*, though, are mine — put each one to me and wait for my answer.

Do not act on it until I confirm we have reached a shared understanding.


2. **Map the frontier.** Grill again, **breadth-first** this time: fan out across the whole space rather than deep on any one thread, surfacing the open decisions and the first steps takeable now. **If this surfaces no fog** — the way to the destination is already clear, the whole journey small enough for one session — you don't need a map. Stop and ask the user how they'd like to proceed.
3. **Create the map** (label \`wayfinder:map\`): Destination and Notes filled in, Decisions-so-far empty, the fog sketched into **Not yet specified**.
4. **Create the tickets you can specify now** as child issues of the map — then wire blocking edges in a **second pass** (issues need ids before they can reference each other). Wiring sorts them into the frontier and the blocked; everything you can't yet specify stays in the fog — the **Not yet specified** section.
5. Stop — charting is one session's work; it hand-resolves nothing.

### Work through the map

User invokes with a map (URL or number). A ticket is **optional** — without one, you pick the next decision, not the user.

1. Load the **map** — the low-res view, not every ticket body.
2. Choose the ticket. If the user named one, use it. Otherwise take the first frontier ticket in order. **Claim it**: assign it to yourself before any work.
3. Resolve it — **zoom as needed**: fetch the full body of any related or closed ticket on demand; invoke the skills the \`## Notes\` block names. You must run \`wayfinder skill grill-with-docs\` before resolving any ticket that reaches a decision — which is every type but \`task\` — so the resolution lands in the map's own vocabulary.
4. Record the resolution: post the answer as a **resolution comment**, **close** the issue, and **append a context pointer** to the map's Decisions-so-far.
5. Add newly-surfaced tickets (create-then-wire); graduate any fog the answer has made specifiable, clearing each graduated patch from **Not yet specified** so it lives only as its new ticket. If the answer reveals a ticket — this one or another — sits beyond the destination, **rule it out of scope** rather than resolving it on the route. If the decision invalidates other parts of the map, update or delete those tickets.

The user may run unblocked tickets in parallel, so expect other sessions to be editing the tracker concurrently.

## Issue tracker: notion

No operations prose ships for **notion**. Use your own knowledge of this tracker, and the tools it provides, to create the map and its tickets.
"
`;

exports[`the wayfinder skill-planning section > renders one row per effective registration, each with its when sentence 1`] = `
"A loose idea has arrived — too big for one agent session, and wrapped in fog: the way from here to the **destination** isn't visible yet. Wayfinding is about finding that way, not charging at the destination. This skill charts the way as a **shared map** on the repo's issue tracker, then works its **decision tickets** — questions whose resolution is a decision, not slices of a build to execute — one at a time until the route is clear.

The destination varies per effort, and naming it is the first act of charting — it shapes every ticket. It might be a spec to hand off and iterate on, a decision to lock before planning starts, or a change made in place like a data-structure migration. The map is domain-agnostic — engineering work, course content, whatever fits the shape.

## Plan, don't do

Wayfinder is **planning** by default: each ticket resolves a decision, and the map is done when the way is clear — nothing left to decide before someone goes and does the thing. The pull to just do the work is usually the signal you've reached the edge of the map and it's time to hand off. An effort can override this in its **Notes** — carrying execution into the map itself — but absent that, produce decisions, not deliverables.

## Refer by name

Every map and ticket is an issue, so it has a **name** — its title. In everything the human reads — narration, the map's Decisions-so-far — refer to it by that name, never by a bare id, number, or slug. A wall of \`#42, #43, #44\` is illegible; names read at a glance. The id and URL don't vanish — a name wraps its link — but they ride *inside* the name, never stand in for it.

## The Map

The map is a single issue on this repo's issue tracker, labelled \`wayfinder:map\` — the canonical artifact. Its tickets are child issues of the map.

The map is an **index**, not a store. It lists the decisions made and points at the tickets that hold their detail; a decision lives in exactly one place — its ticket — so the map never restates it, only gists it and links.

**Where the map, its child tickets, blocking, and frontier queries physically live is tracker-specific.** This repo's tracker and its operations prose sit at the bottom of this skill, under **Issue tracker**. Consult that block's "Wayfinding operations" section for how _this_ repo expresses them. If no tracker is configured, the block tells you how to choose one — never guess a tracker or reach for a local fallback on your own.

### The map body

The whole map at low resolution, loaded once per session. Open tickets are **not** listed — they are open child issues, found by query.

\`\`\`markdown
## Destination

<what reaching the end of this map looks like — the spec, decision, or change this effort is finding its way to. One or two lines; every session orients to it before choosing a ticket.>

## Notes

<domain; skills every session should consult; standing preferences for this effort>

## Decisions so far

<!-- the index — one line per closed ticket: enough to judge relevance, then zoom the link for the detail the ticket holds -->

- [<closed ticket title>](link) — <one-line gist of the answer>

## Not yet specified

<!-- see "Fog of war": in-scope fog you can't ticket yet; graduates as the frontier advances -->

## Out of scope

<!-- see "Out of scope": work ruled beyond the destination; closed, never graduates -->
\`\`\`

### Tickets

Each ticket is a **child issue** of the map; the tracker's issue id is its identity. Its body is the question, sized to one 100K token agent session:

\`\`\`markdown
## Question

<the decision or investigation this ticket resolves>
\`\`\`

Each ticket carries a \`wayfinder:<type>\` label — one of \`grilling\`, \`research\`, \`prototype\`, \`task\` (see [Skill planning](#skill-planning)).

A session **claims** a ticket by assigning it to the dev driving the map, **first**, before any work, so concurrent sessions skip it. That assignee _is_ the claim: an open, unassigned ticket is unclaimed.

Blocking uses the tracker's **native** dependency relationship — essential because it renders the frontier _visually_ in the tracker's own UI, so the human sees what's takeable without opening the map. Only a tracker that lacks native blocking falls back to a body convention. A ticket is **unblocked** when every ticket blocking it is closed; the **frontier** is the open, unblocked, unclaimed children — the edge of the known.

The answer isn't part of the body — it's recorded on resolution (see [Work through the map](#work-through-the-map)). Assets created while resolving a ticket are linked from the issue, not pasted in.

## Skill planning

The \`wayfinder:<type>\` label is a closed set of four, and it names the **shape** of the work, not the skills that resolve it:

- **grilling** — a decision conversation.
- **research** — a fact outside the working directory that a decision waits on.
- **prototype** — a cheap, rough artifact to react to when "how should it look" or "how should it behave" is the question.
- **task** — manual work that must happen before a decision can be made. The one type that *does* rather than decides; it earns its place by unblocking a decision, never by delivering the destination. Its answer records what was done and any facts later tickets depend on.

The type is **orthogonal** to the ticket's skills: any type can carry any skill from the list below. Plan a ticket's skills separately from its type, and record each as a ticket-carried pointer in the ticket body, so the session that claims it loads the skill.

A **task** ticket carries no core skill. It does manual work rather than reaching a decision, so the decision-conversation, research, and prototype protocols have nothing to add to it. A registered ticket skill still applies to a task ticket whenever its when sentence says so.

Readiness is **one rule**: a ticket that needs zero human input is AFK — label it \`ready-for-agent\`; a ticket that needs human oversight is HITL — label it \`ready-for-human\`. A HITL ticket resolves only through a live exchange, and the agent never stands in for the human's side of it (a grilling agent that answers its own questions has broken this).

Plan each ticket's skills from this list:

- \`wayfinder skill grill-with-docs\` — the default decision conversation; reach for it whenever a decision needs talking through.
- \`wayfinder skill research\` — when a fact outside the working directory has to be found before a decision can be made.
- \`wayfinder skill prototype\` — when the open question is how something should look or behave, and a rough artifact would sharpen it.

### Ticket skills

Assign a registered ticket skill to a ticket by writing a ticket-carried pointer that names the harness skill — for example "At session start, invoke the pre-mortem skill and apply it." Each carries the condition that makes it relevant.

- **pre-mortem** — when the ticket carries deploy or migration risk
- **frontend-loop** — when the ticket changes the UI

## Fog of war

The map is _deliberately_ incomplete: don't chart what you can't yet see. Beyond the live tickets lies the **fog of war** — the dim view of decisions and investigations you can tell are coming but can't yet pin down, because they hang on questions still open. Resolving a ticket clears the fog ahead of it, graduating whatever's now specifiable into fresh tickets — one at a time, until the way to the destination is clear and no tickets remain.

The map's **Not yet specified** section is where that dim view is written down: the suspected question, the area to revisit later. It's the undiscovered frontier _toward_ the destination — everything here is in scope, just not sharp enough to ticket. Write as loosely or as fully as the view allows; it doubles as a signpost for collaborators reading where the effort is headed.

**Fog or ticket?** The test is whether you can state the question precisely now — _not_ whether you can answer it now.

- **Ticket when** the question is already sharp — even if it's blocked and you can't act on it yet.
- **Not yet specified when** you can't yet phrase it that sharply. Don't pre-slice the fog into ticket-sized pieces: it's coarser than a ticket, and one patch may graduate into several tickets, or none, once the frontier reaches it.

**Not yet specified** excludes what's already decided (Decisions so far), what's already a live ticket, and what's out of scope (the next section).

## Out of scope

Fog only ever gathers _toward_ the destination. The destination fixes the scope, so work beyond it is **out of scope** — it isn't fog, and it doesn't belong in **Not yet specified**. It gets its own **Out of scope** section on the map: work you've consciously ruled out of _this_ effort. Scope, not sharpness, lands it here.

Out-of-scope work never graduates — the frontier stops at the destination — so it returns only if the destination is redrawn, and then as a fresh effort, not a resumption.

Ruling something out of scope is a scoping act, not a step on the route. When a ticket that already exists turns out to sit past the destination — mis-scoped in while charting, or exposed by a resolution — **close it** (a closed ticket is unambiguously off the frontier) and leave one line in the **Out of scope** section: the gist plus why it's out of scope, linking the closed ticket. It stays out of **Decisions so far**, which records the route actually walked — a scope boundary isn't a step on it.

## Invocation

Two modes. Either way, **never resolve more than one ticket per session**.

### Chart the map

User invokes with a loose idea.

1. **Name the destination** through a decision conversation that pins down what this map is finding its way to — the spec, decision, or change. The destination fixes the scope, so it's settled first. Before you ask your first question you must run \`wayfinder skill grill-with-docs\` — every map names terms and settles design decisions, so the glossary and ADR discipline it carries belongs on this conversation, not only on the ones that feel like design. The protocol is the same either way:

Interview me relentlessly about every aspect of this until we reach a shared understanding. Walk down each branch of the decision tree, resolving dependencies between decisions one-by-one. For each question, provide your recommended answer.

Ask the questions one at a time, waiting for feedback on each question before continuing. Asking multiple questions at once is bewildering.

If a *fact* can be found by exploring the environment (filesystem, tools, etc.), look it up rather than asking me. The *decisions*, though, are mine — put each one to me and wait for my answer.

Do not act on it until I confirm we have reached a shared understanding.


2. **Map the frontier.** Grill again, **breadth-first** this time: fan out across the whole space rather than deep on any one thread, surfacing the open decisions and the first steps takeable now. **If this surfaces no fog** — the way to the destination is already clear, the whole journey small enough for one session — you don't need a map. Stop and ask the user how they'd like to proceed.
3. **Create the map** (label \`wayfinder:map\`): Destination and Notes filled in, Decisions-so-far empty, the fog sketched into **Not yet specified**.
4. **Create the tickets you can specify now** as child issues of the map — then wire blocking edges in a **second pass** (issues need ids before they can reference each other). Wiring sorts them into the frontier and the blocked; everything you can't yet specify stays in the fog — the **Not yet specified** section.
5. Stop — charting is one session's work; it hand-resolves nothing.

### Work through the map

User invokes with a map (URL or number). A ticket is **optional** — without one, you pick the next decision, not the user.

1. Load the **map** — the low-res view, not every ticket body.
2. Choose the ticket. If the user named one, use it. Otherwise take the first frontier ticket in order. **Claim it**: assign it to yourself before any work.
3. Resolve it — **zoom as needed**: fetch the full body of any related or closed ticket on demand; invoke the skills the \`## Notes\` block names. You must run \`wayfinder skill grill-with-docs\` before resolving any ticket that reaches a decision — which is every type but \`task\` — so the resolution lands in the map's own vocabulary.
4. Record the resolution: post the answer as a **resolution comment**, **close** the issue, and **append a context pointer** to the map's Decisions-so-far.
5. Add newly-surfaced tickets (create-then-wire); graduate any fog the answer has made specifiable, clearing each graduated patch from **Not yet specified** so it lives only as its new ticket. If the answer reveals a ticket — this one or another — sits beyond the destination, **rule it out of scope** rather than resolving it on the route. If the decision invalidates other parts of the map, update or delete those tickets.

The user may run unblocked tickets in parallel, so expect other sessions to be editing the tracker concurrently.

## Issue tracker

No issue tracker is configured for this repo, so there is no operations prose to load.

Ask the human to choose one, and do not pick a tracker on your own:

- Use the local markdown tracker — run \`wayfinder tracker set local\`.
- Name this repo's tracker — run \`wayfinder tracker set "<value>"\`, for example \`wayfinder tracker set "github cli"\`.
"
`;
